packages/typ/tests/fixtures/diagnostics/0732_fcm_pack_tuple_type_mismatch_08.ml.infer.expected
File "0732_fcm_pack_tuple_type_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0732_fcm_pack_tuple_type_mismatch_08 is not a valid module name.

File "0732_fcm_pack_tuple_type_mismatch_08.ml", line 11, characters 16-23:
11 | let _ = (module M_theta : Cell_theta with type t = bool * bool)
                     ^^^^^^^
Error: This expression has type (module Cell_theta with type t = bool * bool)
       but an expression was expected of type
         (module Cell_theta with type t = M_theta.t)
       Type bool * bool is not compatible with type M_theta.t = int * int
       Type bool is not compatible with type int
